--- a/style.css
+++ b/style.css
@@ -1,105 +1,196 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Condensed");
+
 header {
-    background-color: #F25757;
+  background-color: #e9a28c;
 }
 body {
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  font-family: "Roboto Condensed", sans-serif;
 }
 .navbar {
-    text-align: right;
-    padding: 5px;
+  text-align: right;
+  padding: 5px;
 }
 .navbar li {
-    display: inline-block;
-    margin-right: 10px;
+  display: inline-block;
+  margin-right: 10px;
 }
 .navbar li a {
-    color: #ffffff;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 24px;
-    transition: background 0.2s ease, color 0.2s ease;
-    background: transparent;
-    text-decoration: none;
+  color: #ffffff;
+  font-family: "Roboto Condensed", sans-serif;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: bold;
+  line-height: 24px;
+  transition: background 0.2s ease, color 0.2s ease;
+  background: transparent;
+  text-decoration: none;
+  cursor: pointer;
 }
 .navbar li a:hover {
-    text-decoration: underline;
+  text-decoration: underline;
 }
-@media only screen and (max-width: 750px){
-    /*Specifikationer for navbar til mobil*/
-        .navbar{
-            bottom: 0;
-            background-color: rgb(133, 0, 0);
-            display: grid;
-            grid-template-columns: auto auto auto;
-            padding-left: 0px;
-            margin-bottom: 0px;
-        }
+.logo {
+  position: absolute;
+  margin-top: 10px;
+}
+.logo img {
+  width: 60%;
+}
+.social img {
+  width: 40px;
+  padding: 5px;
+}
+@media only screen and (max-width: 750px) {
+  /*Specifikationer for navbar til mobil*/
+  .navbar {
+    bottom: 0;
+    background-color: transparent;
+    display: grid;
+    grid-template-columns: auto auto auto;
+    padding-left: 0px;
+    margin-bottom: 0px;
+  }
 
-        .navbar li a{
-            padding: 8px 16px;
-            font-size: 18px;
-        }
-        .portfolios {
-            font-style: italic;
-            text-align: center;
-        }
-        .portfolio1, .portfolio2, .portfolio3 {
-                width: 150px;
-                margin-left: auto;
-                margin-right: auto;
-                margin-top: 15px;
-                margin-bottom: 20px;
-        }
-    }
-    @media only screen and (min-width: 750px) {
-    .portfolios {
-        display: grid;
-        grid-template-columns: auto auto auto;
-        grid-template-rows: auto 50px;
-        font-style: italic;
-        text-align: center;
-        margin-bottom: 50px;
-    }
+  .navbar li a {
+    padding: 8px 16px;
+    font-size: 18px;
+  }
+  .portfolios {
+    font-style: italic;
+    text-align: center;
+  }
+  .portfolio1,
+  .portfolio2,
+  .portfolio3 {
+    width: 150px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 15px;
+    margin-bottom: 20px;
+  }
+}
+@media only screen and (min-width: 750px) {
+  .portfolios {
+    display: grid;
+    grid-template-columns: auto auto auto;
+    grid-template-rows: auto 50px;
+    font-style: italic;
+    text-align: center;
+    margin-bottom: 50px;
+  }
+  .portfolios a {
+    flex: 1;
+    background-color: transparent;
+    color: #fff;
+    border: 3px solid;
+    padding: 0.5rem;
+    text-align: center;
+    text-decoration: none;
+    transition: all 0.5s ease-out;
+  }
+  .portfolios a:hover,
+  .portfolios a:focus {
+    background-color: #fff;
+    color: #e9a28c;
+  }
 }
 .Illustration {
-    width: 530px;
-    height: 400px;
-    display: block;
-    margin-left: auto;
-    padding-top: 50px;
-    padding-bottom: 50px;
+  width: 530px;
+  height: 400px;
+  display: block;
+  margin-left: auto;
+  padding-top: 50px;
 }
 .portfolio1 {
-    grid-column-start: 1;
-    grid-column-end: 1;
-    grid-row-start: 2;
-    grid-row-end: 2;
-    width: 100%;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 15px;
+  grid-column-start: 1;
+  grid-column-end: 1;
+  grid-row-start: 2;
+  grid-row-end: 2;
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 15px;
 }
 .portfolio2 {
-    grid-column-start: 2;
-    grid-column-end: 2;
-    grid-row-start: 2;
-    grid-row-end: 2;
-    width: 100%;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 15px;
+  grid-column-start: 2;
+  grid-column-end: 2;
+  grid-row-start: 2;
+  grid-row-end: 2;
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 15px;
 }
 .portfolio3 {
-    grid-column-start: 3;
-    grid-column-end: 3;
-    grid-row-start: 2;
-    grid-row-end: 2;
-    width: 100%;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 15px;
+  grid-column-start: 3;
+  grid-column-end: 3;
+  grid-row-start: 2;
+  grid-row-end: 2;
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 15px;
+}
+.introtekst {
+  padding-left: 15%;
+  padding-right: 15%;
+  margin-top: 35px;
+}
+p {
+  text-align: center;
+  font-size: 16px;
+}
+h1 {
+  text-align: center;
+  font-size: 26px;
+}
+h2 {
+  text-align: center;
+  font-size: 17px;
+  font-weight: bold;
+  margin-top: -15px;
+}
+
+/** kontakt form */
+/* Style inputs with type="text", select elements and textareas */
+input[type="text"],
+select,
+textarea {
+  width: 100%; /* Full width */
+  padding: 12px; /* Some padding */
+  border: 1px solid #ccc; /* Gray border */
+  border-radius: 4px; /* Rounded borders */
+  box-sizing: border-box; /* Make sure that padding and width stays in place */
+  margin-top: 6px; /* Add a top margin */
+  margin-bottom: 16px; /* Bottom margin */
+  resize: vertical; /* Allow the user to vertically resize the textarea (not horizontally) */
+}
+
+/* Style the submit button with a specific background color etc */
+input[type="submit"] {
+  background-color: #86918d;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+}
+
+/* When moving the mouse over the submit button, add a darker green color */
+input[type="submit"]:hover {
+  background-color: #45a049;
+}
+
+/* Add a background color and some padding around the form */
+.container {
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 20px;
+}
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
 }
 /** 
 https://www.w3schools.com/css/css_link.asp
