--- a/style.css
+++ b/style.css
@@ -45,11 +45,12 @@ body {
   .logo {
     width: 50%;
     margin-top: 50px;
-   }
-   .Illustration {
-    width: 330px;
-    height: 200px;
-   }
+  }
+  .Illustration {
+    width: 260px;
+    height: 130px;
+    margin-left: 100px;
+  }
   .navbar {
     bottom: 0;
     background-color: transparent;
@@ -78,6 +79,13 @@ body {
   }
 }
 @media only screen and (min-width: 750px) {
+  .Illustration {
+    width: 530px;
+    height: 400px;
+    display: block;
+    margin-left: auto;
+    padding-top: 50px;
+  }
   .portfolios {
     display: grid;
     grid-template-columns: auto auto auto;
@@ -101,13 +109,6 @@ body {
     background-color: #fff;
     color: #e9a28c;
   }
-}
-.Illustration {
-  width: 530px;
-  height: 400px;
-  display: block;
-  margin-left: auto;
-  padding-top: 50px;
 }
 .portfolio1 {
   grid-column-start: 1;
