--- a/style.css
+++ b/style.css
@@ -3,17 +3,21 @@
 header {
   background-color: #e9a28c;
 }
+
 body {
   font-family: "Roboto Condensed", sans-serif;
 }
+
 .navbar {
   text-align: right;
   padding: 5px;
 }
+
 .navbar li {
   display: inline-block;
   margin-right: 10px;
 }
+
 .navbar li a {
   color: #ffffff;
   font-family: "Roboto Condensed", sans-serif;
@@ -21,36 +25,43 @@ body {
   font-style: normal;
   font-weight: bold;
   line-height: 24px;
-  transition: background 0.2s ease, color 0.2s ease;
   background: transparent;
   text-decoration: none;
   cursor: pointer;
 }
+
 .navbar li a:hover {
   text-decoration: underline;
 }
+
 .logo {
   position: absolute;
   margin-top: 10px;
 }
+
 .logo img {
   width: 60%;
 }
+
 .social img {
   width: 40px;
   padding: 5px;
 }
+
 @media only screen and (max-width: 750px) {
+
   /*Specifikationer for navbar til mobil*/
   .logo {
     width: 50%;
     margin-top: 50px;
   }
+
   .Illustration {
     width: 260px;
     height: 130px;
     margin-left: 100px;
   }
+
   .navbar {
     bottom: 0;
     background-color: transparent;
@@ -64,10 +75,12 @@ body {
     padding: 8px 16px;
     font-size: 18px;
   }
+
   .portfolios {
     font-style: italic;
     text-align: center;
   }
+
   .portfolio1,
   .portfolio2,
   .portfolio3 {
@@ -78,6 +91,7 @@ body {
     margin-bottom: 20px;
   }
 }
+
 @media only screen and (min-width: 750px) {
   .Illustration {
     width: 530px;
@@ -86,6 +100,7 @@ body {
     margin-left: auto;
     padding-top: 50px;
   }
+
   .portfolios {
     display: grid;
     grid-template-columns: auto auto auto;
@@ -94,8 +109,8 @@ body {
     text-align: center;
     margin-bottom: 50px;
   }
+
   .portfolios a {
-    flex: 1;
     background-color: transparent;
     color: #fff;
     border: 3px solid;
@@ -104,12 +119,14 @@ body {
     text-decoration: none;
     transition: all 0.5s ease-out;
   }
+
   .portfolios a:hover,
   .portfolios a:focus {
     background-color: #fff;
     color: #e9a28c;
   }
 }
+
 .portfolio1 {
   grid-column-start: 1;
   grid-column-end: 1;
@@ -120,6 +137,7 @@ body {
   margin-right: auto;
   margin-top: 15px;
 }
+
 .portfolio2 {
   grid-column-start: 2;
   grid-column-end: 2;
@@ -130,6 +148,7 @@ body {
   margin-right: auto;
   margin-top: 15px;
 }
+
 .portfolio3 {
   grid-column-start: 3;
   grid-column-end: 3;
@@ -140,19 +159,23 @@ body {
   margin-right: auto;
   margin-top: 15px;
 }
+
 .introtekst {
   padding-left: 15%;
   padding-right: 15%;
   margin-top: 35px;
 }
+
 p {
   text-align: center;
   font-size: 16px;
 }
+
 h1 {
   text-align: center;
   font-size: 26px;
 }
+
 h2 {
   text-align: center;
   font-size: 17px;
@@ -165,14 +188,22 @@ h2 {
 input[type="text"],
 select,
 textarea {
-  width: 100%; /* Full width */
-  padding: 12px; /* Some padding */
-  border: 1px solid #ccc; /* Gray border */
-  border-radius: 4px; /* Rounded borders */
-  box-sizing: border-box; /* Make sure that padding and width stays in place */
-  margin-top: 6px; /* Add a top margin */
-  margin-bottom: 16px; /* Bottom margin */
-  resize: vertical; /* Allow the user to vertically resize the textarea (not horizontally) */
+  width: 100%;
+  /* Full width */
+  padding: 12px;
+  /* Some padding */
+  border: 1px solid #ccc;
+  /* Gray border */
+  border-radius: 4px;
+  /* Rounded borders */
+  box-sizing: border-box;
+  /* Make sure that padding and width stays in place */
+  margin-top: 6px;
+  /* Add a top margin */
+  margin-bottom: 16px;
+  /* Bottom margin */
+  resize: vertical;
+  /* Allow the user to vertically resize the textarea (not horizontally) */
 }
 
 /* Style the submit button with a specific background color etc */
@@ -195,12 +226,19 @@ input[type="submit"]:hover {
   background-color: #f2f2f2;
   padding: 20px;
 }
+
 .center {
   display: block;
   margin-left: auto;
   margin-right: auto;
   width: 75%;
 }
+
 /** 
 https://www.w3schools.com/css/css_link.asp
 */
+
+.scrolldown {
+  margin: 0 auto;
+  display: block;
+}
